hardening/lint-sweep/report-cppcheck.txt
Checking /Volumes/heirloom/src/sh/args.c ...
Checking /Volumes/heirloom/src/sh/blok.c ...
Checking /Volumes/heirloom/src/sh/bltin.c ...
Checking /Volumes/heirloom/src/sh/cmd.c ...
/Volumes/heirloom/src/sh/blok.c:0:0: information: Limiting analysis of branches. Use --check-level=exhaustive to analyze all branches. [normalCheckLevelMaxBranches]

^
/Volumes/heirloom/src/sh/args.c:0:0: information: Limiting analysis of branches. Use --check-level=exhaustive to analyze all branches. [normalCheckLevelMaxBranches]

^
/Volumes/heirloom/src/sh/cmd.c:0:0: information: Limiting analysis of branches. Use --check-level=exhaustive to analyze all branches. [normalCheckLevelMaxBranches]

^
Checking /Volumes/heirloom/src/sh/blok.c: DEBUG...
Checking /Volumes/heirloom/src/sh/bltin.c: ACCT...
/Volumes/heirloom/src/sh/blok.c:217:0: error: Found an exit path from function with non-void return type that has missing return statement [missingReturn]
  abort(1);
^
Checking /Volumes/heirloom/src/sh/blok.c: NSIG...
Checking /Volumes/heirloom/src/sh/args.c: NSIG...
Checking /Volumes/heirloom/src/sh/blok.c: RES...
Checking /Volumes/heirloom/src/sh/bltin.c: EMULTIHOP...
Checking /Volumes/heirloom/src/sh/blok.c: pdp11...
1/556 files checked 0% done
Checking /Volumes/heirloom/src/sh/ctype.c ...
Checking /Volumes/heirloom/src/sh/bltin.c: ENOLINK...
Checking /Volumes/heirloom/src/sh/cmd.c: NSIG...
Checking /Volumes/heirloom/src/sh/args.c: RES...
Checking /Volumes/heirloom/src/sh/ctype.c: NSIG...
Checking /Volumes/heirloom/src/sh/ctype.c: RES...
Checking /Volumes/heirloom/src/sh/bltin.c: NSIG...
Checking /Volumes/heirloom/src/sh/ctype.c: pdp11...
2/556 files checked 0% done
Checking /Volumes/heirloom/src/sh/bltin.c: RES...
Checking /Volumes/heirloom/src/sh/defs.c ...
Checking /Volumes/heirloom/src/sh/defs.c: pdp11...
3/556 files checked 0% done
Checking /Volumes/heirloom/src/sh/args.c: pdp11...
Checking /Volumes/heirloom/src/sh/echo.c ...
4/556 files checked 0% done
Checking /Volumes/heirloom/src/sh/cmd.c: RES...
Checking /Volumes/heirloom/src/sh/bltin.c: SPELL...
Checking /Volumes/heirloom/src/sh/error.c ...
/Volumes/heirloom/src/sh/bltin.c:0:0: information: Limiting analysis of branches. Use --check-level=exhaustive to analyze all branches. [normalCheckLevelMaxBranches]

^
/Volumes/heirloom/src/sh/echo.c:0:0: information: Limiting analysis of branches. Use --check-level=exhaustive to analyze all branches. [normalCheckLevelMaxBranches]

^
Checking /Volumes/heirloom/src/sh/echo.c: NSIG...
Checking /Volumes/heirloom/src/sh/echo.c: RES...
Checking /Volumes/heirloom/src/sh/echo.c: SUS...
Checking /Volumes/heirloom/src/sh/echo.c: pdp11...
5/556 files checked 0% done
Checking /Volumes/heirloom/src/sh/expand.c ...
Checking /Volumes/heirloom/src/sh/error.c: NSIG...
Checking /Volumes/heirloom/src/sh/error.c: RES...
Checking /Volumes/heirloom/src/sh/cmd.c: pdp11...
/Volumes/heirloom/src/sh/expand.c:0:0: information: Limiting analysis of branches. Use --check-level=exhaustive to analyze all branches. [normalCheckLevelMaxBranches]

^
Checking /Volumes/heirloom/src/sh/error.c: pdp11...
Checking /Volumes/heirloom/src/sh/expand.c: NSIG...
6/556 files checked 0% done
Checking /Volumes/heirloom/src/sh/fault.c ...
Checking /Volumes/heirloom/src/sh/bltin.c: pdp11...
Checking /Volumes/heirloom/src/sh/expand.c: RES...
7/556 files checked 0% done
Checking /Volumes/heirloom/src/sh/expand.c: pdp11...
/Volumes/heirloom/src/sh/fault.c:0:0: information: Limiting analysis of branches. Use --check-level=exhaustive to analyze all branches. [normalCheckLevelMaxBranches]

^
Checking /Volumes/heirloom/src/sh/func.c ...
8/556 files checked 0% done
9/556 files checked 0% done
Checking /Volumes/heirloom/src/sh/gmatch.c ...
Checking /Volumes/heirloom/src/sh/getopt.c ...
/Volumes/heirloom/src/sh/func.c:0:0: information: Limiting analysis of branches. Use --check-level=exhaustive to analyze all branches. [normalCheckLevelMaxBranches]

^
10/556 files checked 0% done
/Volumes/heirloom/src/sh/gmatch.c:0:0: information: Limiting analysis of branches. Use --check-level=exhaustive to analyze all branches. [normalCheckLevelMaxBranches]

^
Checking /Volumes/heirloom/src/sh/hash.c ...
Checking /Volumes/heirloom/src/sh/fault.c: ACCT...
Checking /Volumes/heirloom/src/sh/fault.c: NSIG...
Checking /Volumes/heirloom/src/sh/func.c: DEBUG...
Checking /Volumes/heirloom/src/sh/hash.c: NSIG...
Checking /Volumes/heirloom/src/sh/func.c: NSIG...
Checking /Volumes/heirloom/src/sh/fault.c: RES...
Checking /Volumes/heirloom/src/sh/gmatch.c: __GNUC__...
Checking /Volumes/heirloom/src/sh/hash.c: RES...
Checking /Volumes/heirloom/src/sh/fault.c: SIGALRM...
Checking /Volumes/heirloom/src/sh/hash.c: pdp11...
Checking /Volumes/heirloom/src/sh/func.c: RES...
11/556 files checked 0% done
Checking /Volumes/heirloom/src/sh/fault.c: SIGBUS...
Checking /Volumes/heirloom/src/sh/func.c: pdp11...
Checking /Volumes/heirloom/src/sh/hashserv.c ...
